fix(ui): Insights - prevent icon stretch

--- a/packages/ui/src/components/insights/insights.module.css
+++ b/packages/ui/src/components/insights/insights.module.css
@@ -1,6 +1,8 @@
 .icon {
+  flex: 0 0 auto;
+  width: calc(var(--space-small) + 6px);
+  height: calc(var(--space-small) + 6px);
   padding: 3px;
-  box-sizing: content-box;
   border-radius: 50%;
   background: var(--color-highlight);
 }
@@ -11,8 +13,9 @@
 }
 
 .warning .icon {
-  background: var(--color-yellow-100);
-  color: var(--color-warning-dark);
+  padding-top: 1px;
+  background: var(--color-yellow-200);
+  color: var(--color-yellow-900);
 }
 
 .info .icon {
